[gd_scene load_steps=5 format=2]

[ext_resource path="res://util/controls/ui_button_left.tscn" type="PackedScene" id=1]
[ext_resource path="res://font/default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://util/controls/ui_button_right.tscn" type="PackedScene" id=3]
[ext_resource path="res://levelup/menu_items/CompressAmountMenuItem.gd" type="Script" id=4]

[node name="CompressAmountMenuItem" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1540.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionContainer" type="HBoxContainer" parent="."]
margin_right = 380.0
margin_bottom = 23.0

[node name="DescriptionLabel" type="Label" parent="DescriptionContainer"]
margin_right = 222.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Compression threshold:         "

[node name="ThresholdLabel" type="Label" parent="DescriptionContainer"]
margin_left = 226.0
margin_right = 257.0
margin_bottom = 23.0
rect_min_size = Vector2( 31, 0 )
custom_fonts/font = ExtResource( 2 )
text = "0.25"
align = 1

[node name="ui_left" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 199, 1 )

[node name="ui_right" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 263, 1 )
